# Web-Scraping-ml

./: .gitignore  Dockerfile  README.md  app.py  app_postgres.py  pyproject.toml  requirements.txt  tabS6lite_prices.db
